<resources>
    <string name="app_name">MyAccount</string>
    <string name="not_supported">Not Supported</string>

    <string name="firstStart_tv_page1.1">船新版本</string>
    <string name="firstStart_tv_page1.2">帐</string>
    <string name="firstStart_tv_page1.3">全新适配Android 10，全面支持新特性</string>
    <string name="firstStart_tv_page1.4">(如果你设置了自定义分类图标，可能需要重新设置)</string>
    <string name="firstStart_tv_page2.1">Android 10</string>
    <string name="firstStart_tv_page2.2">深色主题</string>
    <string name="firstStart_tv_page2.3">更强隐私保护</string>
    <string name="firstStart_tv_page2.4">更快的应用启动速度</string>
    <string name="firstStart_tv_page2.5">等更多特性</string>
    <string name="firstStart_tv_page3.1">无需权限</string>
    <string name="firstStart_tv_page3.2">无需任何额外权限，更安全更保护隐私</string>
    <string name="firstStart_tv_page3.3">(如果你设置了自定义分类图标，可能需要重新设置)</string>
    <string name="firstStart_bt_end">完成</string>
    <string name="normalStart_tv_title">只是一个账本</string>

    <string name="index_tv_networth">净资产</string>
    <string name="index_tv_income">总收入</string>
    <string name="index_tv_expense">总支出</string>
    <string name="index_tv_accountsError">账户信息出现了不合理的值，系统将重置这些值，请手动修改。</string>
    <string name="index_tv_accountsEdit">立刻修改</string>
    <string name="index_tv_accountsCancel">暂不修改</string>

    <string name="longclick_tv_remove">删除</string>
    <string name="longclick_tv_detail">详情</string>
    <string name="longclick_tv_edit">修改</string>
    <string name="longclick_tv_refresh">刷新</string>

    <string name="leftmenu_tv_index">首页</string>
    <string name="leftmenu_tv_history">历史查看</string>
    <string name="leftmenu_tv_analysis">分析统计</string>
    <string name="leftmenu_tv_types">分类管理</string>
    <string name="leftmenu_tv_accounts">账户管理</string>
    <string name="leftmenu_tv_userpage">个人中心</string>
    <string name="leftmenu_tv_more">更多</string>
    <string name="leftmenu_tv_search">账目搜索</string>
    <string name="leftmenu_tv_backup">立即备份</string>
    <string name="leftmenu_tv_donate">捐赠作者</string>
    <string name="leftmenu_tv_setting">设置</string>
    <string name="leftmenu_tv_feedback">反馈和帮助</string>
    <string name="leftmenu_tv_username">小勤快</string>
    <string name="leftmenu_tv_brief">天道酬勤</string>

    <string name="createbill_tv_incomeandexpense">收支</string>
    <string name="createbill_tv_transfer">转账</string>
    <string name="createbill_tv_createagain">再记一笔</string>
    <string name="createbill_bt_income">收入</string>
    <string name="createbill_bt_expense">支出</string>
    <string name="createbill_bt_note">写备注</string>
    <string name="createbill_bt_save">保存</string>
    <string name="createbill_toast_empty">记账金额不应为0</string>
    <string name="createbill_toast_long">金额字符不能超过7位</string>

    <string name="time_pop_title">选择日期</string>
    <string name="time_pop_ok">确定</string>
    <string name="time_pop_today">今天</string>

    <string name="note_pop_hint">备注字符不能超过20</string>
    <string name="note_pop_save">确定</string>
    <string name="note_pop_cancel">取消</string>
    <string name="note_pop_clear">清空</string>

    <string name="detail_tv_title">记录详情</string>
    <string name="detail_tv_delete">删除</string>
    <string name="detail_tv_edit">修改</string>
    <string name="detail_tv_amount">记账金额：</string>
    <string name="detail_tv_type">账目分类： </string>
    <string name="detail_tv_direction">账目类型：</string>
    <string name="detail_tv_account">所属账户：</string>
    <string name="detail_tv_time">创建日期：</string>
    <string name="detail_tv_left">账户余额：</string>
    <string name="detail_tv_note">备注：</string>
    <string name="detail_tv_empty">未填写：</string>

    <string name="accounts_tv_title">账户设置</string>
    <string name="accounts_tv_networth">总资产：</string>
    <string name="accounts_tv_income">总收入：</string>
    <string name="accounts_tv_expense">总支出：</string>
    <string name="accounts_tv_cash">现金：</string>
    <string name="accounts_tv_wechat">微信：</string>
    <string name="accounts_tv_alipay">支付宝：</string>
    <string name="accounts_tv_editing">正在编辑：</string>
    <string name="accounts_tv_save">保存</string>
    <string name="accounts_tv_undo">撤销</string>
    <string name="accounts_toast_long">金额字符不能超过7位</string>

    <string name="billtype_default">其他</string>
    <string name="billtype_food">吃喝饮食</string>
    <string name="billtype_traffic">交通出行</string>
    <string name="billtype_phone">通讯费用</string>
    <string name="billtype_debt">欠债借款</string>
    <string name="billtype_gift">人情礼物</string>
    <string name="billtype_house">房租水电</string>
    <string name="billtype_medical">医疗费用</string>
    <string name="billtype_redpacket">社交红包</string>
    <string name="billtype_shopping">逛街购物</string>
    <string name="billtype_sport">运动健身</string>
    <string name="billtype_wage">工资薪水</string>
    <string name="billtype_daily">日常用品</string>
    <string name="billtype_party">聚会聚餐</string>
    <string name="billtype_stock">基金理财</string>
    <string name="billtype_travel">旅行旅游</string>

    <string name="accounttype_cash">现金</string>
    <string name="accounttype_wechat">微信</string>
    <string name="accounttype_alipay">支付宝</string>

</resources>