<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#87CEFA"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="15dp">

        <ImageView
            android:id="@+id/detail_iv_return"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/global_return" />

        <TextView
            android:id="@+id/detail_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/detail_iv_return"
            android:layout_centerVertical="true"
            android:text="@string/detail_tv_title"
            android:textColor="#F8F8FF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/detail_tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/detail_tv_edit"
            android:layout_centerVertical="true"
            android:text="@string/detail_tv_delete"
            android:textColor="#F8F8FF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/detail_tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/detail_tv_edit"
            android:textColor="#F8F8FF"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="#FFFAFA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_tv_amount"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/detail_tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="22sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="#FFFAFA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_tv_type"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/detail_tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="22sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="#FFFAFA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_tv_direction"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/detail_tv_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="22sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="#FFFAFA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_tv_account"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/detail_tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="22sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="#FFFAFA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_tv_time"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/detail_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="22sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="#FFFAFA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_tv_note"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/detail_tv_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:singleLine="true"/>

    </RelativeLayout>
</LinearLayout>