<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true">

    <RelativeLayout
        android:id="@+id/leftmenu_ll_user"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:paddingLeft="10dp"
        android:background="#00BFFF">

        <ImageView
            android:id="@+id/leftmenu_iv_userpic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/userpic" />

        <TextView
            android:id="@+id/leftmenu_tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/leftmenu_iv_userpic"
            android:text="@string/leftmenu_tv_username"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/leftmenu_tv_userbrief"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/leftmenu_tv_username"
            android:layout_toEndOf="@id/leftmenu_iv_userpic"
            android:layout_marginStart="15dp"
            android:text="@string/leftmenu_tv_brief"
            android:textSize="13sp"
            android:textColor="@color/white" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFAFA"
        android:paddingTop="10dp"
        android:paddingLeft="10dp">

        <LinearLayout
            android:id="@+id/leftmenu_ll_index"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/leftmenu_index"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leftmenu_tv_index"
                android:textSize="18sp"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/leftmenu_ll_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/leftmenu_history"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leftmenu_tv_history"
                android:textSize="18sp"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/leftmenu_ll_analysis"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/leftmenu_analysis"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leftmenu_tv_analysis"
                android:textSize="18sp"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/leftmenu_ll_types"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/leftmenu_types"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leftmenu_tv_types"
                android:textSize="18sp"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/leftmenu_ll_accounts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/leftmenu_accounts"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leftmenu_tv_accounts"
                android:textSize="18sp"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/leftmenu_ll_userpage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/leftmenu_userpage"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leftmenu_tv_userpage"
                android:textSize="18sp"
                android:layout_marginStart="15dp"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#A9A9A9"
        android:clickable="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leftmenu_tv_more"
        android:textSize="15sp"
        android:background="#FFFAFA"
        android:paddingLeft="10dp"
        android:clickable="true"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:id="@+id/leftmenu_ll_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFAFA"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:clickable="true">

        <LinearLayout
            android:id="@+id/leftmenu_ll_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/leftmenu_search"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leftmenu_tv_search"
                android:textSize="18sp"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/leftmenu_ll_backup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/leftmenu_backup"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leftmenu_tv_backup"
                android:textSize="18sp"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/leftmenu_ll_donate"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/leftmenu_donate"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leftmenu_tv_donate"
                android:textSize="18sp"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/leftmenu_ll_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/leftmenu_settings"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leftmenu_tv_setting"
                android:textSize="18sp"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/leftmenu_ll_feedback"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/leftmenu_feedback"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leftmenu_tv_feedback"
                android:textSize="18sp"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>