<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F5F5F5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#87CEFA"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/accounts_iv_return"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/global_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/accounts_tv_title"
            android:textColor="#F8F8FF"
            android:textSize="25sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/accounts_rl_networth"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="#FFFAFA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accounts_tv_networth"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/accounts_tv_networth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="22sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/accounts_rl_income"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="#FFFAFA">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accounts_tv_income"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/accounts_tv_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="22sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/accounts_rl_expense"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="#FFFAFA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accounts_tv_expense"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/accounts_tv_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="22sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/accounts_rl_cash"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="#FFFAFA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accounts_tv_cash"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/accounts_tv_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="22sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/accounts_rl_wechat"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="#FFFAFA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accounts_tv_wechat"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/accounts_tv_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="22sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/accounts_rl_alipay"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:background="#FFFAFA">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accounts_tv_alipay"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/accounts_tv_alipay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="22sp"/>
        </RelativeLayout>
</LinearLayout>