<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <ImageView
        android:id="@+id/bill_iv_type"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_centerVertical="true"
        android:src="@drawable/bill_default" />

    <LinearLayout
        android:id="@+id/bill_ll_middle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/bill_iv_type"
        android:orientation="vertical"
        android:layout_marginEnd="5dp">

        <TextView
            android:id="@+id/bill_tv_type"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/bill_iv_type"
            android:text="@string/billtype_default"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/bill_tv_note"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/bill_tv_type"
            android:layout_toEndOf="@id/bill_iv_type"
            android:text="@string/createbill_bt_note"
            android:singleLine="true"/>

    </LinearLayout>

    <TextView
        android:id="@+id/bill_tv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/bill_ll_middle"
        android:text="@string/accounttype_cash"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/bill_tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="+0.00"
        android:textSize="26sp" />
</RelativeLayout>